--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/2pointers/isHappyNumber.js"
+      "program": "${workspaceFolder}/common/heap.js"
     }
   ]
 }
